# rsnapshot

./: .cvsignore  .gitignore  .perltidyrc  .travis.yml  AUTHORS  CONTRIBUTING.md  ChangeLog  INSTALL  INSTALL.md  Makefile  Makefile.PL  Makefile.am  Makefile.in  NEWS  README  README.developers  README.md  TODO  TODO-tests  aclocal.m4  autoclean.sh  autogen.sh  backup_exec.conf.in  config.guess  config.sub  configure  configure.ac  install-sh  mkinstalldirs  rsnapshot  rsnapshot-diff.1  rsnapshot-diff.pl  rsnapshot-preamble.pl  rsnapshot-program.pl  rsnapshot.1  rsnapshot.conf  rsnapshot.conf.default.in
.github/ISSUE_TEMPLATE/: 1_report_bug.yml  2_feature_request.yml  config.yml
.github/workflows/: publish.yml  test.yml
DEBIAN/: conffiles  control  copyright
NOTES/: README  Upgrading_from_1.1  add_test_case  release_procedure
debian/: NEWS  README.Debian  TODO.Debian  changelog  control  copyright  cron.d  dirs  doc-base  docs  install  lintian-overrides  manpages  postinst  postrm  preinst  rename_retains.sh  rsnapshot.examples  rsnapshot.logrotate  rules  run-rsnapshot  watch
debian/cron.daily/: rsnapshot
debian/cron.hourly/: rsnapshot
debian/cron.monthly/: rsnapshot
debian/cron.weekly/: rsnapshot
debian/default/: rsnapshot
debian/patches/: 01_rsnapshot_conf.diff  02_rsnapshot-lvm-undef.diff  05_backup_pgsql.diff  15-remove-dead-external-css-link.patch  18_rsnapreport_rsync_output.diff  series
debian/tests/: control  test.sh
docs/: Upgrading_from_1.1
docs/HOWTOs/: rsnapshot-HOWTO.en.html  rsnapshot-HOWTO.en.md  rsnapshot-Mac-howto  rsnapshot-windows-howto
docs/docbook/: Makefile  README  README.md  index.html  rest.html  rest.mk  rest.txt  rsnapshot-HOWTO.en.fo  rsnapshot-HOWTO.en.info  rsnapshot-HOWTO.en.xhtml  rsnapshot-HOWTO.en.xml
docs/docbook/_darcs/: index.html
redhat/: README
redhat/SOURCES/: config.patch  rsnapshot.patch
redhat/SPECS/: rsnapshot.spec
src/: rsnapshot-diff.pl  rsnapshot.pl
t/: .cvsignore  01_configtest.t.in  02_rsync.t.in  03_gnu_cp.t.in  Mock.pm.in  SysWrap.pm.in  backup_exec.t.in  backup_exec_fail.t.in  cmd-post_pre-exec.t.in  configtest-required-options.t.in  configtest.t.in  file-permissions-tests.t.in  gnu_cp.t.in  link-dest_-t_when_only_one_snapshot.t.in  relative_delete_bugfix.t.in  rsync.t.in  snapshot_root_with_space.t.in  ssh_args.t.in
t/backup_exec/: backup_exec.t.in
t/backup_exec/conf/: backup_exec.conf.in  backup_exec_fail.conf.in
t/backup_script/: backup_script.t.in
t/backup_script/conf/: backup_script.conf.in  backup_script_duplicate_dest_1.conf.in  backup_script_duplicate_dest_2.conf.in
t/btrfstest/: btrfstest.t.in
t/btrfstest/conf/: btrfs-badcmd.conf.in  btrfs-nobtrfs.conf.in  btrfs-nosnapname.conf.in  btrfs.conf.in
t/cmd-post_pre-exec/: cmd-post_pre-exec.t.in
t/cmd-post_pre-exec/conf/: pre-false-post-false.conf.in  pre-false-post-true.conf.in  pre-true-post-false.conf.in  pre-true-post-true.conf.in
t/configtest/: configtest.t.in
t/configtest/conf/: configtest.conf.in
t/gnu_cp/: gnu_cp.t.in
t/gnu_cp/conf/: gnu_cp.conf.in
t/include_conf/: include_conf.t.in
t/include_conf/conf/: bad_include_conf.conf.in  bad_include_file.in  include_conf.conf.in  include_file.in  no_include_conf.conf.in
t/include_conf_dir/: include_conf_dir.t.in
t/include_conf_dir/conf/: include_conf_dir.conf.in  include_conf_dir_regex.conf.in  include_conf_dir_subdirs.conf.in
t/link-dest_-t_when_only_one_snapshot/: link-dest_-t_when_only_one_snapshot.t.in
t/link-dest_-t_when_only_one_snapshot/conf/: link-dest_-t_when_only_one_snapshot.conf.in
t/long_and_short_args/: long_and_short_args.t.in
t/long_and_short_args/conf/: long_and_short_args.conf.in  long_and_short_args_inline.conf.in
t/lvm_options/: lvm_options.t.in
t/lvm_options/conf/: lvm_options.conf.in
t/native_cp_al/: native_cp_al.t.in
t/native_cp_al/conf/: native_cp_al.conf.in
t/numtries/: numtries.t.in
t/numtries/conf/: numtries_fail_negative.conf.in  numtries_fail_notanumber.conf.in  numtries_fail_zero.conf.in  numtries_ok.conf.in
t/relative_delete_bugfix/: relative_delete_bugfix.t.in
t/relative_delete_bugfix/conf/: relative_delete_bugfix.conf.in
t/rotate_only_when_0_avail/: rotate_only_when_0_avail.t.in
t/rotate_only_when_0_avail/conf/: rotate_only_when_0_avail.conf.in
t/rsnapshot_meta/: rsnapshot_meta.t.in
t/rsync/: rsync.t.in
t/rsync-exitcode/: rsync-exitcode.t.in
t/rsync-exitcode/conf/: rsync-exitcode-bad.conf.in
t/rsync/conf/: rsync.conf.in
t/rsync_wait_between_tries/: rsync_wait_between_tries.t.in
t/rsync_wait_between_tries/conf/: rsync_wait_between_tries_fail_floatingpoint.conf.in  rsync_wait_between_tries_fail_negative.conf.in  rsync_wait_between_tries_fail_notanumber.conf.in  rsync_wait_between_tries_ok.conf.in
t/snapshot_root_with_space/: snapshot_root_with_space.t.in
t/snapshot_root_with_space/conf/: snapshot_root_with_space.conf.in
t/ssh_args/: ssh_args.t.in
t/ssh_args/conf/: ssh_args.conf.in  ssh_args_inline.conf.in
t/support/etc/: 01_configtest.conf.in  02_rsync.conf.in  03_gnu_cp.conf.in  backup_exec.conf.in  configtest-required1.conf.in  configtest-required2.conf.in  configtest-required3.conf.in  configtest-required4.conf.in  configtest-required5.conf.in  configtest-required6.conf.in  configtest.conf.in  gnu_cp.conf.in  link-dest_-t_when_only_one_snapshot.conf.in  snapshot_root_with_space.conf.in  ssh_args.conf.in
t/support/skel/: testcase  testconf
utils/: README  backup_dpkg.sh  backup_mysql.sh  backup_pgsql.sh  backup_rsnapshot_cvsroot.sh  backup_smb_share.sh  backup_sqlite.sh  debug_moving_files.sh  make_cvs_snapshot.sh  mkmakefile.sh  mysqlbackup.pl  random_file_verify.sh  rsnapreport.pl  rsnapshot-copy  rsnapshot-diff  rsnapshot_if_mounted.sh  rsnapshot_invert.sh  rsnapshot_mount_wrapper  rsnapshot_mount_wrapper.1  rsnaptar  sign_packages.sh  upgrade_rsnapshot.pl  upgrade_to_120.pl  validate_backup_command.sh
utils/rsnapshotdb/: '  CHANGES.txt  INSTALL.txt  README.txt  TODO.txt  rsnapshotDB.conf.sample  rsnapshotDB.pl  rsnapshotDB.xsd  rsnapshotdb.list  rsnapshotdb.pl
(+20 files in other folders)
